ENG-0000 fix(portal): attempt to fix zoom and scroll issues on mobile (#766)
## Affected Packages

Apps

- [x] portal

Packages

- [ ] 1ui
- [ ] api
- [ ] protocol
- [ ] sdk

Tools

- [ ] tools

## Overview

Users were experiencing strange zoom and scroll behavior when
interacting with the app. This will require some testing once it is
deployed, because I can only test in the browser in mobile mode until
then.

## Screen Captures

If applicable, add screenshots or screen captures of your changes.

## Declaration

- [x] I hereby declare that I have abided by the rules and regulations
as outlined in the
[CONTRIBUTING.md](https://github.com/0xIntuition/intuition-ts/blob/main/CONTRIBUTING.md)

--- a/apps/portal/app/styles/globals.css
+++ b/apps/portal/app/styles/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html body {
+html,
+body {
   overflow-x: hidden;
+  touch-action: pan-y;
+  -webkit-overflow-scrolling: touch;
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
 }
